--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  background-color: rgb(19, 19, 19);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +12,17 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+
+.container {
+  margin: 20px 10px;
+}
+
+h1 {
+  font-size: 3rem;
+  letter-spacing: 3px;
+  color: white;
 }
